--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "react-icons": "^5.0.1"
   },
   "devDependencies": {
+    "@types/node": "20.11.20",
+    "@types/react": "18.2.59",
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.7.2",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "5.3.3"
   }
 }
